# AutomatedFactorResearcher

./: .gitignore  20T_StratMangerBillion.py  AWSgenProgWorker.py  AWSgenProgWorkerV2.py  AlphaFitnessFunctions.py  BuildStrategy.py  CRYPTO_AWSgenProgWorkerV2.py  Constants.py  CryptoStratMangerBillion.py  CryptoStratMangerPCA.py  ETFstratMangerBillion.py  GPfunctions.py  MetaManger.py  MetaManger_BAK.py  QP_Testing.py  RiskModelFunctions.py  SpawnGenProg.py  StockReturnDecoder.py  StratManger.py  StratMangerBillion.py  StratMangerBillionTOP100.py  StratMangerBillion_BAK6_6.py  StratMangerDecode.py  StratMangerEMAoptim.py  StratMangerFullOptim.py  StratMangerGrainger.py  StratMangerLinReg.py  StratMangerLinReg_BAK.py  StratMangerTopX.py  TEST.py  TableCreation.sql  config.py  enhanced_gemini_agent.py  logger.py  requirements.txt  step7_v2.err
factor-alpha-platform/: .dockerignore  .env.example  .gitignore  4h_portfolio_last_run.md  4h_portfolio_results.md  AIPT_RESEARCH_NOTES.md  CLAUDE.md  CUsersbrethAppDataLocalTempcvxpy_mv.txt  CUsersbrethAppDataLocalTempportfolio_compare.txt  CUsersbrethAppDataLocalTempscoreboard_out.txt  DATA_CATALOG.md  EXPERIMENTS.md  EXTENSION_PLAN.md  ISICHENKO_PIPELINE.md  PIPELINE.md  PIPELINE_5m.md  README.md  VoC_PIPELINE_COMPLETE.md  VoC_QP_AUGMENTED_RESULTS.md  VoC_QP_FULL_RESULTS.md  WINNING_PIPELINE.md  WORKFLOW_4H.md  _aipt_paper.txt  _build_universes.py  _cap_page_239.txt  _cap_page_240.txt  _capacity_fine.py  _capacity_section.txt  _check_alphas.py  _check_trade_log.py  _collect_results.py  _compute_daily_pnl.py  _count.py  _dump_ib_db.py  _extract_cap.py  (+265 more)
(+485 files in other folders)
