[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factor-alpha-platform"
version = "0.1.0"
description = "Automated equity factor alpha research, backtesting, combination, and portfolio optimization platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "duckdb>=0.9",
    "pyarrow>=14.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=12.0",
    "sqlalchemy>=2.0",
    "deap>=1.4",
    "google-generativeai>=0.3",
]

[project.optional-dependencies]
optimization = [
    "cvxpy>=1.4",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.92",
    "mypy>=1.7",
    "ruff>=0.1.8",
    "pre-commit>=3.6",
    "httpx>=0.25",
]
connectors = [
    "yfinance>=0.2",
    "requests>=2.31",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks benchmark tests",
    "e2e: marks end-to-end tests",
]
